--- a/media-plugins/vdr-dvdconvert/ChangeLog
+++ b/media-plugins/vdr-dvdconvert/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-dvdconvert
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-dvdconvert/ChangeLog,v 1.3 2007/04/17 12:42:26 zzam Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-dvdconvert/ChangeLog,v 1.4 2008/08/01 19:45:25 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   17 Apr 2007; Matthias Schwarzott <zzam@gentoo.org> files/rc-addon.sh:
   Removed bash specific stuff.
