--- a/media-plugins/vdr-graphtft/ChangeLog
+++ b/media-plugins/vdr-graphtft/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-graphtft
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.7 2008/07/28 21:15:44 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-graphtft/ChangeLog,v 1.8 2008/08/01 19:47:00 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   28 Jul 2008; Carsten Lohrke <carlo@gentoo.org>
   vdr-graphtft-0.1.18_alpha.ebuild:
