--- a/media-plugins/vdr-music/ChangeLog
+++ b/media-plugins/vdr-music/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-music
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-music/ChangeLog,v 1.4 2008/06/22 17:25:17 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-music/ChangeLog,v 1.5 2008/08/01 19:50:07 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   22 Jun 2008; Ben de Groot <yngwin@gentoo.org> vdr-music-0.2.0.ebuild:
   Undoing previous change, as media-plugins/vdr-graphtft is unmasked again.
