--- a/media-plugins/vdr-pvr350/ChangeLog
+++ b/media-plugins/vdr-pvr350/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-pvr350
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-pvr350/ChangeLog,v 1.12 2008/07/01 19:56:23 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-pvr350/ChangeLog,v 1.13 2008/08/01 19:52:04 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   01 Jul 2008; Matthias Schwarzott <zzam@gentoo.org>
   vdr-pvr350-0.0.4_pre1.ebuild, vdr-pvr350-0.0.4.20070807.ebuild,
