--- a/games-misc/fortune-mod-woody-allen-it/ChangeLog
+++ b/games-misc/fortune-mod-woody-allen-it/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-woody-allen-it
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-woody-allen-it/ChangeLog,v 1.2 2008/08/01 18:05:01 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-woody-allen-it/ChangeLog,v 1.3 2008/08/01 19:56:55 ken69267 Exp $
+
+  01 Aug 2008; Kenneth Prugh <ken69267@gentoo.org>
+  fortune-mod-woody-allen-it-0.1.ebuild:
+  amd64 stable, bug #233444
 
   01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
   fortune-mod-woody-allen-it-0.1.ebuild:
