--- a/media-plugins/vdr-text2skin/ChangeLog
+++ b/media-plugins/vdr-text2skin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-text2skin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-text2skin/ChangeLog,v 1.3 2008/05/06 20:35:14 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-text2skin/ChangeLog,v 1.4 2008/08/01 20:02:48 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
   06 May 2008; Matthias Schwarzott <zzam@gentoo.org>
   +files/20070506/07_pkgconfig_magick.diff, files/20070506/series,
