--- a/games-misc/fortune-mod-slackware/ChangeLog
+++ b/games-misc/fortune-mod-slackware/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-slackware
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-slackware/ChangeLog,v 1.8 2008/08/01 18:06:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-slackware/ChangeLog,v 1.9 2008/08/01 20:10:58 ken69267 Exp $
+
+  01 Aug 2008; Kenneth Prugh <ken69267@gentoo.org>
+  fortune-mod-slackware-1.15.ebuild:
+  amd64 stable, bug #233445
 
   01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
   fortune-mod-slackware-1.15.ebuild:
