--- a/xfce-extra/xfce4-mpc/ChangeLog
+++ b/xfce-extra/xfce4-mpc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-mpc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mpc/ChangeLog,v 1.6 2008/04/27 02:07:43 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mpc/ChangeLog,v 1.7 2008/08/01 20:11:30 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
 *xfce4-mpc-0.3.3 (27 Apr 2008)
 
