--- a/www-client/mozilla-firefox-bin/ChangeLog
+++ b/www-client/mozilla-firefox-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.153 2008/07/18 17:12:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.154 2008/08/01 20:16:44 armin76 Exp $
+
+*mozilla-firefox-bin-3.1_alpha1 (01 Aug 2008)
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-firefox-bin-3.1_alpha1.ebuild:
+  Add alpha1
 
 *mozilla-firefox-bin-3.0.1-r1 (18 Jul 2008)
 
