--- a/dev-util/eclipse-sdk/ChangeLog
+++ b/dev-util/eclipse-sdk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/eclipse-sdk
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.145 2008/07/28 20:12:29 elvanor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.146 2008/08/01 20:27:52 elvanor Exp $
+
+  01 Aug 2008; Jean-Noël Rivasseau <elvanor@gentoo.org>
+  eclipse-sdk-3.3.1.1-r2.ebuild:
+  Fix for #233574, slotted ecj dependency.
 
 *eclipse-sdk-3.3.1.1-r2 (28 Jul 2008)
 
