Remove mplayer-bin support, bug #233394 Package-Manager: portage-2.1.4.4

--- a/net-www/mplayerplug-in/ChangeLog
+++ b/net-www/mplayerplug-in/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mplayerplug-in
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/ChangeLog,v 1.107 2008/06/16 03:13:51 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mplayerplug-in/ChangeLog,v 1.108 2008/08/01 20:31:43 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
+  -files/mplayerplug-in-mplayer-bin.patch, mplayerplug-in-3.45.ebuild,
+  mplayerplug-in-3.50.ebuild:
+  Remove mplayer-bin support, bug #233394
 
   16 Jun 2008; Joseph Jezak <josejx@gentoo.org> mplayerplug-in-3.50.ebuild:
   Marked ppc/ppc64 stable, fixed has_multilib in global for bug #211440.
