--- a/media-sound/banshee/ChangeLog
+++ b/media-sound/banshee/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/banshee
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.66 2008/07/07 16:26:03 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.67 2008/08/01 20:33:09 loki_val Exp $
+
+*banshee-1.2.0 (01 Aug 2008)
+
+  01 Aug 2008; Peter Alfredsen <loki_val@gentoo.org> +banshee-1.2.0.ebuild:
+  bump to banshee 1.2
 
   07 Jul 2008; Samuli Suominen <drac@gentoo.org> banshee-1.0.0-r1.ebuild:
   Update taglib-sharp dep. for bug #230465, thanks to corec.
