--- a/net-dialup/ppp/ChangeLog
+++ b/net-dialup/ppp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.223 2008/08/01 18:57:23 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.224 2008/08/01 20:58:23 mrness Exp $
+
+*ppp-2.4.4-r19 (01 Aug 2008)
+
+  01 Aug 2008; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r18.ebuild,
+  +ppp-2.4.4-r19.ebuild:
+  Export LDFLAGS used to compile plugin programs (#233317).
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> ppp-2.4.4-r15.ebuild:
   Stable on ppc wrt bug 227183
