--- a/app-portage/portato/ChangeLog
+++ b/app-portage/portato/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/portato
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.9 2008/06/08 18:04:19 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.10 2008/08/01 21:12:13 jokey Exp $
+
+*portato-0.11 (01 Aug 2008)
+
+  01 Aug 2008; Markus Ullmann <jokey@gentoo.org> +portato-0.11.ebuild:
+  Version bump per necoro's request
 
   08 Jun 2008; Markus Ullmann <jokey@gentoo.org> metadata.xml:
   Update metadata
