--- a/app-portage/portato/ChangeLog
+++ b/app-portage/portato/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portato
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.10 2008/08/01 21:12:13 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.11 2008/08/01 21:17:21 jokey Exp $
+
+  01 Aug 2008; Markus Ullmann <jokey@gentoo.org> portato-0.11.ebuild:
+  wgetpaste--
 
 *portato-0.11 (01 Aug 2008)
 
