--- a/games-strategy/hedgewars/ChangeLog
+++ b/games-strategy/hedgewars/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-strategy/hedgewars
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.9 2008/07/11 18:15:05 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.10 2008/08/01 21:39:27 mr_bones_ Exp $
+
+*hedgewars-0.9.6 (01 Aug 2008)
+
+  01 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +hedgewars-0.9.6.ebuild:
+  version bump
 
 *hedgewars-0.9.5 (11 Jul 2008)
 
