Sparc stable --- Bug #233644 --- All looks good. Package-Manager: portage-2.2_rc6/cvs/Linux 2.6.20-gentoo-r8 x86_64

--- a/app-portage/ufed/ChangeLog
+++ b/app-portage/ufed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/ufed
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.63 2008/06/26 21:04:15 truedfx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.64 2008/08/01 22:12:24 fmccor Exp $
+
+  01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> ufed-0.40-r10.ebuild:
+  Sparc stable --- Bug #233644 --- All looks good.
 
 *ufed-0.40-r10 (26 Jun 2008)
 
