--- a/dev-libs/libev/ChangeLog
+++ b/dev-libs/libev/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libev
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libev/ChangeLog,v 1.2 2008/06/22 00:49:26 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libev/ChangeLog,v 1.3 2008/08/02 00:06:00 matsuu Exp $
+
+*libev-3.43 (02 Aug 2008)
+
+  02 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> +libev-3.43.ebuild:
+  Version bumped.
 
 *libev-3.42-r1 (22 Jun 2008)
 
