--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.505 2008/08/01 21:08:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.506 2008/08/02 00:53:27 mpagano Exp $
+
+*vanilla-sources-2.6.26.1 (02 Aug 2008)
+
+  02 Aug 2008; Michael Pagano <mpagano@gentoo.org>
+  +vanilla-sources-2.6.26.1.ebuild:
+  Version bump
 
 *vanilla-sources-2.6.25.14 (01 Aug 2008)
 
