--- a/dev-java/tomcat-servlet-api/ChangeLog
+++ b/dev-java/tomcat-servlet-api/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.50 2008/05/30 17:18:39 ken69267 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.51 2008/08/02 01:19:55 wltjr Exp $
+
+*tomcat-servlet-api-6.0.18 (02 Aug 2008)
+
+  02 Aug 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  +tomcat-servlet-api-6.0.18.ebuild:
+  Bumped to latest release
 
   30 May 2008; Kenneth Prugh <ken69267@gentoo.org>
   tomcat-servlet-api-3.ebuild:
