--- a/dev-util/kdevelop/ChangeLog
+++ b/dev-util/kdevelop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/kdevelop
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.166 2008/07/02 13:57:06 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.167 2008/08/02 05:04:48 jer Exp $
+
+  02 Aug 2008; Jeroen Roovers <jer@gentoo.org> kdevelop-3.5.2-r1.ebuild:
+  Marked ~hppa too.
 
   02 Jul 2008; Brent Baude <ranger@gentoo.org> kdevelop-3.5.2-r1.ebuild:
   stable ppc, bug 230121
