--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.106 2008/07/27 08:54:15 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.107 2008/08/02 07:16:53 dertobi123 Exp $
+
+*bind-tools-9.5.0_p2 (02 Aug 2008)
+*bind-tools-9.4.2_p2 (02 Aug 2008)
+
+  02 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  +bind-tools-9.4.2_p2.ebuild, -bind-tools-9.5.0_p1-r2.ebuild,
+  +bind-tools-9.5.0_p2.ebuild:
+  Version bump
 
 *bind-tools-9.5.0_p1-r2 (27 Jul 2008)
 
