--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.204 2008/07/27 08:56:35 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.205 2008/08/02 07:21:14 dertobi123 Exp $
+
+*bind-9.5.0_p2 (02 Aug 2008)
+*bind-9.4.2_p2 (02 Aug 2008)
+
+  02 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  +bind-9.4.2_p2.ebuild, -bind-9.5.0_p1-r2.ebuild, +bind-9.5.0_p2.ebuild:
+  Version bump
 
 *bind-9.5.0_p1-r2 (27 Jul 2008)
 
