--- a/app-text/noweb/ChangeLog
+++ b/app-text/noweb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/noweb
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/noweb/ChangeLog,v 1.33 2008/07/04 03:48:21 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/noweb/ChangeLog,v 1.34 2008/08/02 07:18:54 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   04 Jul 2008; Ulrich Mueller <ulm@gentoo.org> +files/50noweb-gentoo.el,
   noweb-2.11b.ebuild:
