--- a/app-text/pdftk/ChangeLog
+++ b/app-text/pdftk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/pdftk
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pdftk/ChangeLog,v 1.25 2007/05/07 09:29:31 genstef Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/pdftk/ChangeLog,v 1.26 2008/08/02 07:21:17 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
 *pdftk-1.41 (07 May 2007)
 
