--- a/app-text/sword-modules/ChangeLog
+++ b/app-text/sword-modules/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/sword-modules
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/sword-modules/ChangeLog,v 1.25 2007/07/02 14:25:43 peper Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/sword-modules/ChangeLog,v 1.26 2008/08/02 07:28:48 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
   sword-modules-20041209.ebuild:
