--- a/app-text/sword/ChangeLog
+++ b/app-text/sword/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/sword
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/sword/ChangeLog,v 1.43 2008/07/29 02:17:20 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/sword/ChangeLog,v 1.44 2008/08/02 07:26:00 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
 *sword-1.5.11 (29 Jul 2008)
 
