--- a/app-text/webgen/ChangeLog
+++ b/app-text/webgen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/webgen
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/webgen/ChangeLog,v 1.6 2008/04/11 18:46:18 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/webgen/ChangeLog,v 1.7 2008/08/02 07:37:34 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   11 Apr 2008; Santiago M. Mola <coldwind@gentoo.org> webgen-0.4.7.ebuild:
   Added ~amd64.
