--- a/app-text/texlive/ChangeLog
+++ b/app-text/texlive/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/texlive
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.38 2008/05/12 20:36:40 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.39 2008/08/02 07:51:57 ulm Exp $
+
+  02 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   12 May 2008; nixnut <nixnut@gentoo.org> texlive-2007-r3.ebuild:
   Stable on ppc wrt bug 220651
