--- a/net-mail/vacation/ChangeLog
+++ b/net-mail/vacation/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/vacation
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/vacation/ChangeLog,v 1.14 2008/08/01 18:02:16 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/vacation/ChangeLog,v 1.15 2008/08/02 09:13:58 tove Exp $
 
   01 Aug 2008; Raúl Porcel <armin76@gentoo.org> vacation-1.2.6.3.ebuild:
   alpha/x86 stable wrt #233248
@@ -13,7 +13,7 @@
   Version bump, bug #231379. Fixed some unquoted variables, removed obsolete
   version 1.2.6.1.
 
-  24 Aug 2007; RaÃºl Porcel <armin76@gentoo.org> vacation-1.2.6.2.ebuild,
+  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> vacation-1.2.6.2.ebuild,
   vacation-1.2.6.3.ebuild:
   alpha stable wrt #189111
 
@@ -29,7 +29,7 @@
   +vacation-1.2.6.3.ebuild:
   Version bump. Also installing vaclook now.
 
-  22 Feb 2007; Piotr JaroszyÅski <peper@gentoo.org> ChangeLog:
+  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
 
 *vacation-1.2.6.2 (23 Oct 2006)
