--- a/games-misc/cowsay/ChangeLog
+++ b/games-misc/cowsay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/cowsay
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/cowsay/ChangeLog,v 1.19 2008/01/11 16:26:57 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/cowsay/ChangeLog,v 1.20 2008/08/02 09:57:01 bluebird Exp $
+
+  02 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> cowsay-3.03-r1.ebuild:
+  Stable on sparc, bug #233671
 
   11 Jan 2008; Fabian Groffen <grobian@gentoo.org> cowsay-3.03.ebuild,
   cowsay-3.03-r1.ebuild:
