--- a/dev-perl/GraphViz/ChangeLog
+++ b/dev-perl/GraphViz/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/GraphViz
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.4 2007/01/15 22:32:51 mcummings Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.5 2008/08/02 10:43:27 tove Exp $
+
+*GraphViz-2.03 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +GraphViz-2.03.ebuild:
+  Version bump
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org> GraphViz-2.02.ebuild:
   Ebuild maintenance
