--- a/dev-perl/Test-ClassAPI/ChangeLog
+++ b/dev-perl/Test-ClassAPI/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Test-ClassAPI
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-ClassAPI/ChangeLog,v 1.27 2008/03/28 09:49:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-ClassAPI/ChangeLog,v 1.28 2008/08/02 10:58:49 tove Exp $
+
+*Test-ClassAPI-1.05 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +Test-ClassAPI-1.05.ebuild:
+  Version bump
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Test-ClassAPI-1.04-r1.ebuild:
   Stable for HPPA too.
