--- a/dev-perl/prefork/ChangeLog
+++ b/dev-perl/prefork/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/prefork
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.24 2008/08/02 11:03:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.25 2008/08/02 11:05:10 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -prefork-1.00.ebuild:
+  Cleanup
 
 *prefork-1.02 (02 Aug 2008)
 
