--- a/dev-perl/Scalar-Properties/ChangeLog
+++ b/dev-perl/Scalar-Properties/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Scalar-Properties
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Scalar-Properties/ChangeLog,v 1.12 2008/03/19 02:24:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Scalar-Properties/ChangeLog,v 1.13 2008/08/02 11:14:39 tove Exp $
+
+*Scalar-Properties-0.13 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +Scalar-Properties-0.13.ebuild:
+  Version bump
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org>
   Scalar-Properties-0.12.ebuild:
