--- a/dev-perl/cache-mmap/ChangeLog
+++ b/dev-perl/cache-mmap/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/cache-mmap
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/cache-mmap/ChangeLog,v 1.19 2008/06/13 16:12:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/cache-mmap/ChangeLog,v 1.20 2008/08/02 11:22:48 tove Exp $
+
+*cache-mmap-0.11 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +cache-mmap-0.11.ebuild,
+  -cache-mmap-0.081.ebuild:
+  Version bump. Cleanup
 
   13 Jun 2008; Raúl Porcel <armin76@gentoo.org> cache-mmap-0.09.ebuild:
   ia64 stable
