--- a/perl-core/Filter/ChangeLog
+++ b/perl-core/Filter/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Filter
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/ChangeLog,v 1.20 2008/03/28 06:55:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Filter/ChangeLog,v 1.21 2008/08/02 11:36:47 tove Exp $
+
+*Filter-1.34 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +Filter-1.34.ebuild:
+  Version bump
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Filter-1.33.ebuild:
   Stable for HPPA too.
