--- a/sys-devel/binutils-nios2/ChangeLog
+++ b/sys-devel/binutils-nios2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/binutils-nios2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-nios2/ChangeLog,v 1.3 2007/02/22 00:48:51 jokey Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-nios2/ChangeLog,v 1.4 2008/08/02 11:39:04 pchrist Exp $
+
+  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
+  Update metadata.xml to include USE flag descriptions. Entries taken from
+  profiles/use.local.desc. GLEP 56
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
