--- a/dev-perl/libwww-perl/ChangeLog
+++ b/dev-perl/libwww-perl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/libwww-perl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.85 2008/07/29 08:08:35 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.86 2008/08/02 11:39:45 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -libwww-perl-5.812.ebuild:
+  Cleanup
 
 *libwww-perl-5.814 (29 Jul 2008)
 
