Update metadata.xml to include USE flag descriptions. Entries taken from profiles/use.local.desc. GLEP 56 Package-Manager: portage-2.2_rc5/cvs/Linux 2.6.25-gentoo-r4 i686

--- a/sys-devel/gettext/ChangeLog
+++ b/sys-devel/gettext/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gettext
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.164 2008/07/02 20:39:13 the_paya Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.165 2008/08/02 12:04:24 pchrist Exp $
+
+  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
+  Update metadata.xml to include USE flag descriptions. Entries taken from
+  profiles/use.local.desc. GLEP 56
 
   02 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
   gettext-0.17.ebuild:
