--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.107 2008/08/02 07:16:53 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.108 2008/08/02 12:22:05 chainsaw Exp $
+
+  02 Aug 2008; <chainsaw@gentoo.org> bind-tools-9.4.2_p2.ebuild:
+  Stable AMD64 keyword for security bug #233675, tested on Opteron 2218
+  (hardened/amd64, gcc-3.4.6, glibc-2.6.1-r0, 2.6.24-hardened-r3 x86_64) and
+  Opteron 2354 (default/linux/amd64/2008.0/developer, gcc-4.3.1,
+  glibc-2.8_p20080602-r0, 2.6.27-rc1-00154-g660fc1f-dirty x86_64).
 
 *bind-tools-9.5.0_p2 (02 Aug 2008)
 *bind-tools-9.4.2_p2 (02 Aug 2008)
