--- a/sys-devel/kgcc64/ChangeLog
+++ b/sys-devel/kgcc64/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/kgcc64
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/kgcc64/ChangeLog,v 1.18 2008/07/14 17:57:50 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/kgcc64/ChangeLog,v 1.19 2008/08/02 12:45:22 pchrist Exp $
+
+  02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
+  Update metadata.xml to include USE flag descriptions. Entries taken from
+  profiles/use.local.desc. GLEP 56
 
   14 Jul 2008; Guy Martin <gmsoft@gentoo.org> kgcc64-4.2.4.ebuild:
   Stable on hppa.
