--- a/games-rpg/nwn/ChangeLog
+++ b/games-rpg/nwn/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-rpg/nwn
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.68 2008/08/01 18:52:28 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.69 2008/08/02 13:45:12 calchan Exp $
+
+*nwn-1.69 (02 Aug 2008)
+
+  02 Aug 2008; Denis Dupeyron <calchan@gentoo.org> +nwn-1.69.ebuild:
+  Version bump, see bug #231704. Massively simplified the ebuild since this
+  version supports only the english language.
 
   01 Aug 2008; Denis Dupeyron <calchan@gentoo.org> Manifest:
   Fixed Manifest, bug #227419.
