--- a/games-rpg/nwmovies/ChangeLog
+++ b/games-rpg/nwmovies/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for games-rpg/nwmovies
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwmovies/ChangeLog,v 1.3 2008/05/29 14:26:47 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwmovies/ChangeLog,v 1.4 2008/08/02 14:00:15 calchan Exp $
+
+*nwmovies-0.2 (02 Aug 2008)
+
+  02 Aug 2008; Denis Dupeyron <calchan@gentoo.org> nwmovies-0.1.ebuild,
+  +nwmovies-0.2.ebuild:
+  Version bump. Switched to using upstream's precompiled and tested
+  binaries.
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org> nwmovies-0.1.ebuild:
   stable x86, bug 222519
