--- a/net-misc/l7-filter-userspace/ChangeLog
+++ b/net-misc/l7-filter-userspace/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/l7-filter-userspace
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter-userspace/ChangeLog,v 1.4 2008/06/29 11:54:57 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-filter-userspace/ChangeLog,v 1.5 2008/08/02 14:13:06 dragonheart Exp $
+
+*l7-filter-userspace-0.7 (02 Aug 2008)
+
+  02 Aug 2008; Daniel Black <dragonheart@gentoo.org>
+  +l7-filter-userspace-0.7.ebuild:
+  version bump
 
   29 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
   files/l7-filter-userspace-0.6-gcc4.3compat.patch:
