--- a/sys-apps/busybox/ChangeLog
+++ b/sys-apps/busybox/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/busybox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.191 2008/06/18 01:31:19 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.192 2008/08/02 15:20:07 solar Exp $
+
+*busybox-1.11.1 (02 Aug 2008)
+
+  02 Aug 2008; <solar@gentoo.org> +files/busybox-1.11.1-bb.patch,
+  +busybox-1.11.1.ebuild:
+  - version bump. Thanks Christoph Gysin bug #230637
 
 *busybox-1.10.3 (18 Jun 2008)
 
