--- a/app-accessibility/speakup/ChangeLog
+++ b/app-accessibility/speakup/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-accessibility/speakup
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup/ChangeLog,v 1.11 2008/07/24 02:18:43 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup/ChangeLog,v 1.12 2008/08/02 15:56:42 williamh Exp $
+
+*speakup-3.0.3_p20080802 (02 Aug 2008)
+
+  02 Aug 2008; William Hubbs <williamh@gentoo.org>
+  -speakup-3.0.3_p20080723.ebuild, +speakup-3.0.3_p20080802.ebuild:
+  New snapshot.
 
 *speakup-3.0.3_p20080723 (24 Jul 2008)
 
