--- a/net-misc/netkit-telnetd/ChangeLog
+++ b/net-misc/netkit-telnetd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/netkit-telnetd
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-telnetd/ChangeLog,v 1.44 2008/02/05 11:10:40 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-telnetd/ChangeLog,v 1.45 2008/08/02 16:58:11 solar Exp $
+
+*netkit-telnetd-0.17-r9 (02 Aug 2008)
+
+  02 Aug 2008; <solar@gentoo.org> +netkit-telnetd-0.17-r9.ebuild:
+  - Keeping in sync with debian which is now at patch level 36
 
   05 Feb 2008; Markus Rothe <corsair@gentoo.org>
   netkit-telnetd-0.17-r8.ebuild:
