Add --script-security 2 for bug #233657 Package-Manager: portage-2.1.4.4

--- a/net-misc/openvpn/ChangeLog
+++ b/net-misc/openvpn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/openvpn
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openvpn/ChangeLog,v 1.136 2008/08/01 09:03:43 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openvpn/ChangeLog,v 1.137 2008/08/02 18:14:52 cedk Exp $
+
+  02 Aug 2008; Cédric Krier <cedk@gentoo.org> files/openvpn-2.1.init:
+  Add --script-security 2 for bug #233657
 
 *openvpn-2.1_rc9 (01 Aug 2008)
 
