--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.109 2008/08/02 16:46:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.110 2008/08/02 18:26:16 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> bind-tools-9.4.2_p2.ebuild:
+  Stable on ppc64; bug #233675
 
   02 Aug 2008; Jeroen Roovers <jer@gentoo.org> bind-tools-9.4.2_p2.ebuild:
   Stable for HPPA (bug #233675).
