--- a/dev-perl/Set-IntSpan/ChangeLog
+++ b/dev-perl/Set-IntSpan/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Set-IntSpan
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.28 2008/03/19 03:13:49 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.29 2008/08/02 18:57:11 tove Exp $
+
+*Set-IntSpan-1.13 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +Set-IntSpan-1.13.ebuild:
+  Version bump
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Set-IntSpan-1.12.ebuild:
   Stable for HPPA too.
