--- a/dev-perl/Set-IntSpan/ChangeLog
+++ b/dev-perl/Set-IntSpan/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Set-IntSpan
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.29 2008/08/02 18:57:11 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Set-IntSpan/ChangeLog,v 1.30 2008/08/02 19:01:35 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -Set-IntSpan-1.08.ebuild,
+  -Set-IntSpan-1.09.ebuild, -Set-IntSpan-1.10.ebuild,
+  -Set-IntSpan-1.11.ebuild:
+  Cleanup
 
 *Set-IntSpan-1.13 (02 Aug 2008)
 
