--- a/dev-perl/text-wrapper/ChangeLog
+++ b/dev-perl/text-wrapper/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/text-wrapper
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-wrapper/ChangeLog,v 1.23 2008/03/28 09:45:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-wrapper/ChangeLog,v 1.24 2008/08/02 19:05:58 tove Exp $
+
+*text-wrapper-1.02 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +text-wrapper-1.02.ebuild:
+  Version bump
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> text-wrapper-1.01.ebuild:
   Stable for HPPA too.
