--- a/dev-perl/text-wrapper/ChangeLog
+++ b/dev-perl/text-wrapper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/text-wrapper
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-wrapper/ChangeLog,v 1.24 2008/08/02 19:05:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/text-wrapper/ChangeLog,v 1.25 2008/08/02 19:07:45 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -text-wrapper-1.000.ebuild:
+  Cleanup
 
 *text-wrapper-1.02 (02 Aug 2008)
 
