--- a/dev-perl/Array-Window/ChangeLog
+++ b/dev-perl/Array-Window/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Array-Window
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.20 2007/11/10 11:56:31 drac Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.21 2008/08/02 19:25:26 tove Exp $
+
+*Array-Window-1.02 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +Array-Window-1.02.ebuild:
+  Version bump
 
   10 Nov 2007; Samuli Suominen <drac@gentoo.org> Array-Window-1.01.ebuild:
   amd64 stable
