--- a/dev-perl/Array-Window/ChangeLog
+++ b/dev-perl/Array-Window/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Array-Window
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.21 2008/08/02 19:25:26 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.22 2008/08/02 19:27:29 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -Array-Window-0.4.ebuild:
+  Cleanup
 
 *Array-Window-1.02 (02 Aug 2008)
 
