--- a/media-sound/alsa-headers/ChangeLog
+++ b/media-sound/alsa-headers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.154 2008/06/05 07:39:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.155 2008/08/02 21:00:30 betelgeuse Exp $
+
+*alsa-headers-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +alsa-headers-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   05 Jun 2008; Raúl Porcel <armin76@gentoo.org> alsa-headers-1.0.16.ebuild:
   ia64 stable
