--- a/media-sound/alsa-tools/ChangeLog
+++ b/media-sound/alsa-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-tools
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-tools/ChangeLog,v 1.160 2008/05/13 14:53:24 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-tools/ChangeLog,v 1.161 2008/08/02 21:00:24 betelgeuse Exp $
+
+*alsa-tools-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +alsa-tools-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   13 May 2008; Steve Dibb <beandog@gentoo.org> alsa-tools-1.0.16.ebuild:
   amd64 stable, bug 217075
@@ -622,9 +628,9 @@
   Version update.
   Require virtual/alsa instead of media-sound/alsa-driver.
 
-*alsa-tools-0.9.4 (03 June 2003)
+*alsa-tools-0.9.4 (03 Jun 2003)
 
-  06 June 2003; Arcady Genkin <agenkin@gentoo.org> :
+  06 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
   Added patch by Jason Rhinelander <jason-gentoo@gossamer-threads.com>
   (bug #22324) to fix compilation with gcc 3.3.
 
