--- a/media-sound/alsa-utils/ChangeLog
+++ b/media-sound/alsa-utils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.241 2008/06/05 07:43:04 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.242 2008/08/02 21:00:32 betelgeuse Exp $
+
+*alsa-utils-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +files/alsa-utils-1.0.17-seq.patch, +alsa-utils-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   05 Jun 2008; Raúl Porcel <armin76@gentoo.org> alsa-utils-1.0.16.ebuild:
   ia64 stable
@@ -930,9 +936,9 @@
   11 Jul 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
-*alsa-utils-0.9.4 (03 June 2003)
+*alsa-utils-0.9.4 (03 Jun 2003)
 
-  03 June 2003; Arcady Genkin <agenkin@gentoo.org> :
+  03 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
 *alsa-utils-0.9.3 (04 May 2003)
