Stable on ppc64; bug #233122 Package-Manager: portage-2.1.4.4

--- a/net-libs/libssh2/ChangeLog
+++ b/net-libs/libssh2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libssh2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libssh2/ChangeLog,v 1.13 2008/08/01 18:38:37 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libssh2/ChangeLog,v 1.14 2008/08/02 21:34:09 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> libssh2-0.18.ebuild:
+  Stable on ppc64; bug #233122
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> libssh2-0.18.ebuild:
   Stable on ppc wrt bug 233122
