--- a/app-office/dia/ChangeLog
+++ b/app-office/dia/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/dia
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.107 2008/07/28 23:18:55 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.108 2008/08/03 10:32:20 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   28 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
   +files/dia-0.96.1-64bit-fixes.patch, dia-0.96.1-r1.ebuild:
