--- a/app-office/grisbi/ChangeLog
+++ b/app-office/grisbi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/grisbi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/grisbi/ChangeLog,v 1.29 2008/05/19 18:25:19 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/grisbi/ChangeLog,v 1.30 2008/08/03 10:34:51 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   19 May 2008; Daniel Gryniewicz <dang@gentoo.org> files/grisbi.desktop,
   grisbi-0.5.8.ebuild, grisbi-0.5.9.ebuild:
