--- a/app-office/kmymoney2/ChangeLog
+++ b/app-office/kmymoney2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/kmymoney2
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.73 2008/07/08 21:48:17 gentoofan23 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kmymoney2/ChangeLog,v 1.74 2008/08/03 10:40:33 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   08 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
   kmymoney2-0.9.ebuild:
