--- a/app-office/lyx/ChangeLog
+++ b/app-office/lyx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/lyx
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.140 2008/07/27 00:59:56 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.141 2008/08/03 10:44:01 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> lyx-1.5.5.ebuild,
   lyx-1.6.0_beta3.ebuild, lyx-1.6.0_beta4.ebuild:
